--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^6.9.16"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
